@@ -132,3 +132,8 @@
  (name subtitle_remux)
  (modules subtitle_remux)
  (libraries ffmpeg-av))
+
+(executable
+ (name bitmap_subtitle_to_jpeg)
+ (modules bitmap_subtitle_to_jpeg)
+ (libraries ffmpeg-av ffmpeg-swscale))
